# ordo_back

./: .env.example  .gitignore  .pre-commit-config.yaml  Procfile  README.md  conftest.py  docker-compose.yml  dump_db.env.example  dump_db.sh  gulpfile.js  implantdirect-order.py  manage.py  package-lock.json  package.json  pyproject.toml  pytest.ini  req.txt  requirements.txt  requirements_teacher.txt  us.atlanta.ovpn.com.ovpn  windows_requirements.txt
.ebextensions/: django.config  packages.config  ssl.config
.platform/nginx/: nginx.conf
apps/accounts/: admin.py  apps.py  factories.py  filters.py  helper.py  managers.py  models.py  permissions.py  serializers.py  services.py  signals.py  stripe.py  tasks.py  urls.py  utils.py  views.py
apps/accounts/fixtures/: accounts_vendor.json
apps/accounts/managers/: base_active.py  company.py  company_member.py  office.py  subscription.py  vendor.py
apps/accounts/migrations/: 0001_initial.py  0002_alter_companymember_token_expires_at.py  0002_alter_officevendor_username.py  0002_auto_20210827_1004.py  0002_auto_20210914_0818.py  0002_auto_20210914_0943.py  0002_auto_20210915_0351.py  0002_auto_20211112_1904.py  0002_auto_20211117_2015.py  0003_alter_officebudget_options.py  0003_auto_20210830_0343.py  0003_auto_20211013_1053.py  0003_auto_20211013_2033.py  0003_auto_20211115_1226.py  0003_auto_20211202_1957.py  0004_alter_office_phone_number.py  0004_alter_officevendor_unique_together.py  0004_auto_20211015_0409.py  0004_auto_20211203_1729.py  0005_alter_office_options.py  0005_auto_20210921_1003.py  0005_companymember_invited_by.py  0005_companymember_is_active.py  0006_alter_user_is_active.py  0006_auto_20210923_0950.py  0006_auto_20220113_1634.py  0007_auto_20210903_0349.py  0007_vendorrequest.py  0008_alter_user_is_active.py  0008_vendor_shipping_options.py  0009_auto_20220411_2151.py  0010_officebudget_miscellaneous_spend.py  0011_auto_20220602_2329.py  0012_officesetting.py  0013_officesetting_percentage_threshold.py  0014_office_dental_api.py  0015_officebudget_adjusted_production_and_more.py  0016_officevendor_login_success.py  0017_remove_vendor_shipping_options.py  0018_shippingmethod_officevendor_default_shipping_option_and_more.py  (+11 more)
apps/accounts/services/: billing.py  offices.py  stripe.py
apps/accounts/tests/: factories.py  helpers.py  test_auth.py  test_company.py  test_company_member.py  test_office_budget_helper.py  test_office_budget_v1.py  test_office_budget_v2.py  test_signup.py  utils.py
apps/accounts/views/: company.py  company_member.py  health.py  invitation_check.py  office.py  office_budget.py  office_vendor.py  user.py  user_signup.py  vendor.py  vendor_request.py
apps/api_clients/: dc_dental.py  dental_city.py  factory.py
apps/audit/: models.py  serializers.py  urls.py  views.py
apps/audit/migrations/: 0001_initial.py  0002_searchhistory.py  0003_productparenthistory_delete_productrelationhistory.py  0004_rollbackinformation.py  0005_alter_productparenthistory_operation_id.py  0006_badimageurl.py  (+1 more)
apps/auth/: views.py
apps/common/: admins.py  asyncdrf.py  choices.py  custom_widgets.py  enums.py  helper.py  messages.py  models.py  pagination.py  query.py  renders.py  serializers.py  utils.py
apps/notifications/: models.py  serializers.py  services.py  urls.py  views.py
apps/orders/: admin.py  apps.py  factories.py  filters.py  helpers.py  managers.py  models.py  parsers.py  permissions.py  price_updater.py  product_updater.py  serializers.py  signals.py  tasks.py  types.py  updater.py  urls.py  views.py
apps/reports/: urls.py  utils.py  views.py
apps/scrapers/: amazon.py  amazonsearch.py  atomo.py  base.py  benco.py  bergmand.py  biohorizons.py  bluesky_bio.py  crazy_dental.py  darby.py  dcdental.py  dental_city.py  ebay_search.py  edge_endo.py  errors.py  henryschein.py  implant_direct.py  midwest_dental.py  net32.py  office_depot.py  orthoarch.py  patterson.py  pearson.py  practicon.py  purelife.py  safco.py  salvin.py  schema.py  scraper_factory.py  scraper_headers.py  semaphore.py  similarity.py  skydental.py  test.py  top_glove.py  ultradent.py  utils.py
apps/types/: accounts.py  orders.py  scraper.py
apps/utils/: misc.py
apps/vendor_clients/: __init__.py  amazon.py  base.py  benco.py  darby.py  debug.py  dental_city.py  edge_endo.py  errors.py  henry_schein.py  implant_direct.py  net32.py  patterson.py  types.py  ultradent.py
config/: asgi.py  celery.py  celeryconfig.py  constants.py  exception_handler.py  urls.py  utils.py  uvicorn_worker.py  wsgi.py
config/settings/: __init__.py  api_versioning.py  base.py  local.py  production.py  sentry.py  staging.py  version.py
devops/postgres/: postgresql.conf
ordo_backend/: asgi.py  settings.py  wsgi.py
products/: dcdental.json
promotions/: __init__.py  base.py  benco.py  darby.py  dentalcity.py  exceptions.py  henry_schein.json  henryschein.py  midwest_dental.py  net32.py  patterson.py  safco.py  schema.py  skydentalsupply.py  ultradent.json  ultradent.py  utils.py
promotions/headers/: midwest_dental.py  safco.py
query/: adopt_orphans.sql  fill_missing_office_products.sql  proc_result.sql  proc_result.txt  proc_result_new.sql  proc_schedule.sql  proc_subquery.sql  proc_subquery.txt  procedure.json  procedure.sql  production.json  production.sql
scripts/: dbdump.py  extract_darby_manufacturer_number.py  extract_procedurecode.py  henry_promo.py  henry_schein_fill_manufacturer_number.py  henryschein.json  procedure_code.txt
services/: opendental.py  utils.py
services/api_client/: __init__.py  dc_dental.py  dental_city.py  errors.py  net_32.py  vendor_api_types.py
services/utils/: pseudo_email_authentication.py  secrets.py
templates/admin/: app_list.html  base.html  change_form.html  change_list.html  change_list_object_tools.html  change_list_results.html  delete_confirmation.html  delete_selected_confirmation.html  index.html  login.html  pagination.html  search_form.html
templates/components/: base.html  custom-base.html  landing-base.html  switcher-base.html
test/: email_test.py
tests/: factories.py
(+336 files in other folders)
